fix bottom margin .grille + .grille li border visible ...

--- a/css/SMACSS/Theme.styl
+++ b/css/SMACSS/Theme.styl
@@ -6,6 +6,7 @@
 
 .page-inner
   margin-top 50px
+  // width 100%
   h1
     hidetext()
     background: url('images/logo-app.png');
@@ -179,10 +180,10 @@ footer
 
 .search
   position: relative
-  margin: 1px -10px
-  padding-top: 10px
+  margin: 0 -3.1%
+  padding-top: .8em
   .inner
-    margin: 0 10px
+    margin: 0 3.1%
     position: relative
 
   input
@@ -276,10 +277,11 @@ input::-webkit-input-placeholder {
     width 90%
     margin 0 auto
     line-height 1.2
+    // padding-bottom 70px
 
   .critere-off
     &+.liste-criteres
-      margin-top 65px
+      margin-top 19%
 
   li
     border-image:  url("images/li-border-bottom.png")  100% 0 0
@@ -324,8 +326,6 @@ input::-webkit-input-placeholder {
     margin-top -20px
     top 50%
     background: transparent url('images/header-icon-set.png') -160px -40px no-repeat
-
-
 
 
 
